<resources>
    <string name="app_name">Travel App</string>
    <string name="title_activity_signin">Sign in</string>
    <string name="shared_pref_name">MyPref</string>
    <string name="token_info_key">TokenInfo</string>
    <string name="image_description">Image</string>
    <string name="successful">Successful</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="action_sign_out_short">Sign out</string>
    <string name="hello">Hello</string>

    <!-- Facebook service -->
    <string name="facebook_app_id">557655331445964</string>
    <string name="fb_login_protocol_scheme">fb557655331445964</string>

    <!-- Google service -->
    <string name="Google_ClientID">909268945482-i1mb32jphvu5k19crfnolq56nclgjf1c.apps.googleusercontent.com</string>
    <string name="Google_ClientSecret">YjbgV-IK-T-vMrvtbf-FF9b8</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_out_button_name">Sign out</string>
    <string-array name="province">
        <item>Hồ Chí Minh</item>
        <item>Hà Nội</item>
        <item>Đà Nẵng</item>
        <item>Bình Dương</item>
        <item>Đồng Nai</item>
        <item>Khánh Hòa</item>
        <item>Hải Phòng</item>
        <item>Long An</item>
        <item>Quảng Nam</item>
        <item>Bà Rịa Vũng Tàu</item>
        <item>Đắk Lắk</item>
        <item>Cần Thơ</item>
        <item>Bình Thuận</item>
        <item>Lâm Đồng</item>
        <item>Thừa Thiên Huế</item>
        <item>Kiên Giang</item>
        <item>Bắc Ninh</item>
        <item>Quảng Ninh</item>
        <item>Thanh Hóa</item>
        <item>Nghệ An</item>
        <item>Hải Dương</item>
        <item>Gia Lai</item>
        <item>Bình Phước</item>
        <item>Hưng Yên</item>
        <item>Bình Định</item>
        <item>Tiền Giang</item>
        <item>Thái Bình</item>
        <item>Bắc Giang</item>
        <item>Hòa Bình</item>
        <item>An Giang</item>
        <item>Vĩnh Phúc</item>
        <item>Tây Ninh</item>
        <item>Thái Nguyên</item>
        <item>Lào Cai</item>
        <item>Nam Định</item>
        <item>Quảng Ngãi</item>
        <item>Bến Tre</item>
        <item>Đắk Nông</item>
        <item>Cà Mau</item>
        <item>Vĩnh Long</item>
        <item>Ninh Bình</item>
        <item>Phú Thọ</item>
        <item>Ninh Thuận</item>
        <item>Phú Yên</item>
        <item>Hà Nam</item>
        <item>Hà Tĩnh</item>
        <item>Đồng Tháp</item>
        <item>Sóc Trăng</item>
        <item>Kon Tum</item>
        <item>Quảng Bình</item>
        <item>Quảng Trị</item>
        <item>Trà Vinh</item>
        <item>Hậu Giang</item>
        <item>Sơn La</item>
        <item>Bạc Liêu</item>
        <item>Yên Bái</item>
        <item>Tuyên Quang</item>
        <item>Điện Biên</item>
        <item>Lai Châu</item>
        <item>Lạng Sơn</item>
        <item>Hà Giang</item>
        <item>Bắc Kạn</item>
        <item>Cao Bằng</item>

    </string-array>

    <!-- Map type-->
    <string name="map_type_normal">Normal</string>
    <string name="map_type_terrain">Terrain</string>
    <string name="map_type_satellite">Satellite</string>
    <string name="map_type_hybrid">Hybrid</string>

    <!-- Search-->
    <string name="search">Search</string>

    <string-array name="serviceName">
        <item>Restaurant</item>
        <item>Hotel</item>
        <item>Rest Station</item>
        <item>Other</item>
    </string-array>

    <!-- String for Settings Fragment -->
    <string name="edit_profile_button_name">Edit profile ></string>
    <string name="setting_language_text_view">Language</string>

    <!-- String for Forgot password activity -->
    <string name="forgotpassword_guide">Select which contact details should we use to reset your password:</string>
    <string name="forgotpassword_via_sms">Via sms</string>
    <string name="forgotpassword_via_email">Via email</string>
    <string name="forgotpassword_nextbutton">Next</string>
    <string name="forgotpassword_verification">Enter the code that you received</string>
    <string name="forgotpassword_enter_new_password">Enter your new password</string>
    <string name="forgotpassword_successfully">Congratulation! Your password is updated successfully</string>
    <string name="forgotpassword_continuebutton">Continue</string>

    <!-- String for Edit profile activity -->
    <string name="edit_profile_full_name">Full name</string>
    <string name="edit_profile_email">Email</string>
    <string name="edit_profile_phone">Phone</string>
    <string name="edit_profile_gender">Gender</string>
    <string name="edit_profile_gender_male">Male</string>
    <string name="edit_profile_gender_female">Female</string>
    <string name="edit_profile_dob">Date of birth</string>
    <string name="edit_profile_address">Address</string>
    <string name="edit_profile_update_button">Update</string>

    <!-- String for Tour detail activity -->
    <string name="tourdetail_tourname">Tour Name</string>
    <string name="tourdetail_startdate">Start date</string>
    <string name="tourdetail_enddate">End date</string>
    <string name="tourdetail_adults">Adults</string>
    <string name="tourdetail_children">Children</string>
    <string name="tourdetail_mincost">Min cost</string>
    <string name="tourdetail_maxcost">Max const</string>
    <string name="tourdetail_changetourimage">Change tour image</string>
    <string name="tourdetail_isprivatetrip">Is that your private trip?</string>
    <string name="tourdetail_status">Status</string>
    <string name="tourdetail_status_canceled">Canceled</string>
    <string name="tourdetail_status_open">Open</string>
    <string name="tourdetail_status_started">Started</string>
    <string name="tourdetail_status_closed">Closed</string>
    <string name="tourdetail_update">Update</string>
</resources>
