<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearlayout_editprofile_updateform"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    android:paddingTop="10dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_profile_full_name"
            android:layout_marginBottom="7dp"/>
        <EditText
            android:id="@+id/edittext_editprofile_fullname"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/rounded_edittext"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:maxLines="1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_profile_email"
            android:layout_marginBottom="7dp"/>
        <EditText
            android:id="@+id/edittext_editprofile_email"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/rounded_edittext"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:maxLines="1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_profile_address"
            android:layout_marginBottom="7dp"/>
        <EditText
            android:id="@+id/edittext_editprofile_address"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/rounded_edittext"
            android:inputType="text"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:maxLines="1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_profile_phone"
            android:layout_marginBottom="7dp"/>
        <EditText
            android:id="@+id/edittext_editprofile_phone"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/rounded_edittext"
            android:inputType="phone"
            android:maxLines="1"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"/>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/linearlayout_editprofile_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="10dp"
            android:layout_alignParentStart="true">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_profile_gender"
                android:layout_marginBottom="7dp"/>
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/radiobutton_editprofile_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edit_profile_gender_male" />
                <RadioButton
                    android:id="@+id/radiobutton_editprofile_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edit_profile_gender_female"
                    android:layout_marginStart="5dp"/>
            </RadioGroup>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="40dp"
            android:layout_toRightOf="@+id/linearlayout_editprofile_gender"
            android:layout_marginStart="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_profile_dob"
                android:layout_marginBottom="7dp"/>
            <TextView
                android:id="@+id/textview_editprofile_dob"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/rounded_edittext"
                android:gravity="center"/>
        </LinearLayout>
    </RelativeLayout>
    <Button
        android:id="@+id/button_editprofile_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_profile_update_button"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:background="@drawable/rounded_button"
        android:textAllCaps="false"
        android:layout_gravity="center_horizontal" />
</LinearLayout>