<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/linearlayout_tourdetail_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="7dp"
            android:paddingRight="7dp"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tourdetail_tourname"
                android:layout_marginBottom="7dp"
                android:textColor="#000000"/>

            <EditText
                android:id="@+id/editext_tourdetail_tourname"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:padding="5dip"
                android:maxLines="1"
                android:singleLine="true"
                android:background="@drawable/rounded_edittext_states"
                android:inputType="text"
                android:imeOptions="actionDone"/>
        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="7dp"
            android:paddingRight="7dp"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingRight="7dp"
                android:orientation="vertical">
                <TextView
                    android:layout_marginBottom="7dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tourdetail_startdate"
                    android:textColor="#000000"/>

                <TextView
                    android:id="@+id/textview_tourdetail_startdate"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:padding="5dip"
                    android:textColor="#000000"
                    android:background="@drawable/rounded_edittext_states"
                    android:gravity="center"
                    android:hint="Select date"
                    android:focusable="true"
                    android:focusableInTouchMode="true" />
            </LinearLayout>
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="7dp"
                android:orientation="vertical">
                <TextView
                    android:layout_marginBottom="7dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tourdetail_enddate"
                    android:textColor="#000000"/>

                <TextView
                    android:id="@+id/textview_tourdetail_enddate"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:padding="5dip"
                    android:textColor="#000000"
                    android:background="@drawable/rounded_edittext_states"
                    android:gravity="center"
                    android:hint="Select date"
                    android:focusable="true"
                    android:focusableInTouchMode="true"/>
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="7dp"
            android:paddingRight="7dp"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingRight="7dp"
                android:orientation="vertical">
                <TextView
                    android:layout_marginBottom="7dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tourdetail_adults"
                    android:textColor="#000000"/>

                <EditText
                    android:id="@+id/edittext_tourdetail_adults"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:padding="5dip"
                    android:background="@drawable/rounded_edittext_states"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:digits="0123456789"
                    android:inputType="numberDecimal"
                    android:textColorHint="#000000"
                    android:imeOptions="actionNext"/>
            </LinearLayout>
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="7dp"
                android:orientation="vertical">
                <TextView
                    android:layout_marginBottom="7dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tourdetail_children"
                    android:textColor="#000000"/>

                <EditText
                    android:id="@+id/edittext_tourdetail_children"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:padding="5dip"
                    android:background="@drawable/rounded_edittext_states"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:digits="0123456789"
                    android:inputType="numberDecimal"
                    android:textColorHint="#000000"
                    android:imeOptions="actionNext"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="7dp"
            android:paddingRight="7dp"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingRight="7dp"
                android:orientation="vertical">
                <TextView
                    android:layout_marginBottom="7dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tourdetail_mincost"
                    android:textColor="#000000"/>
                <EditText
                    android:id="@+id/edittext_tourdetail_mincost"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:padding="5dip"
                    android:background="@drawable/rounded_edittext_states"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:digits="0123456789"
                    android:inputType="numberDecimal"
                    android:textColorHint="#000000"
                    android:imeOptions="actionNext"/>
            </LinearLayout>
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="7dp"
                android:orientation="vertical">
                <TextView
                    android:layout_marginBottom="7dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tourdetail_maxcost"
                    android:textColor="#000000"/>

                <EditText
                    android:id="@+id/edittext_tourdetail_maxcost"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:padding="5dip"
                    android:background="@drawable/rounded_edittext_states"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:digits="0123456789"
                    android:inputType="numberDecimal"
                    android:textColorHint="#000000"
                    android:imeOptions="actionDone"/>
            </LinearLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_marginRight="7dp"
            android:layout_marginLeft="7dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:layout_height="50dp"
            android:background="@drawable/rounded_edittext_states"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp">
            <TextView
                android:id="@+id/textview_tourdetail_chooseimgdes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/tourdetail_changetourimage"
                android:textColor="#000000"
                android:textSize="16sp"
                android:layout_centerVertical="true"/>

            <Button
                android:id="@+id/button_tourdetail_chooseimgbtn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:background="@color/transparent"
                android:text="+"
                android:textColor="#fc8c03"
                android:textSize="30sp"
                android:gravity="right|center_vertical"
                android:paddingRight="20dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />
        </RelativeLayout>

        <CheckBox
            android:id="@+id/checkbox_tourdetail_isprivate"
            android:padding="7dp"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tourdetail_isprivatetrip"
            android:textSize="16sp"
            android:layout_marginBottom="10dp"/>
        <Button
            android:id="@+id/button_tourdetail_update"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/rounded_button"
            android:textColor="#FFFFFF"
            android:textAllCaps="false"
            android:text="@string/tourdetail_update"
            android:textSize="16sp"
            android:layout_marginStart="7dp"
            android:layout_marginEnd="7dp"/>
    </LinearLayout>
</ScrollView>